# binary-bpe

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  extract_dataset.py  main.py  pyproject.toml
benches/: training.rs
references/: special_tokens.json
scripts/: analyze_tokenizers.py  compare_tokenizations.py  run_sample_001.sh
src/: bytes.rs  config.rs  corpus.rs  error.rs  lib.rs  metrics.rs  model.rs  preprocess.rs  special_tokens.rs  trainer.rs
src/serialization/: huggingface.rs  mod.rs
src/trainer/: word.rs
tests/: cli.rs
