[package]
name = "bbpe"
version = "0.1.0"
edition = "2021"
authors = ["Binary BPE Maintainers <michael.bommarito@gmail.com>"]
description = "Binary byte pair encoding (BPE) trainer and CLI compatible with Hugging Face tokenizers"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mjbommar/binary-bpe"
homepage = "https://github.com/mjbommar/binary-bpe"
documentation = "https://docs.rs/bbpe"
keywords = ["bpe", "binary", "malware", "tokenizer", "huggingface"]
categories = ["encoding", "science::ai"]
rust-version = "1.74"
exclude = [
    "/target",
    "/*.json",
    "/tokenizer*.json",
    "/**/*.swp",
    "/**/*.rs.bk",
    "/test_data",
    "/.gitignore",
    "/.github",
]

[features]
default = ["cli"]
cli = ["clap", "indicatif", "env_logger"]

[lib]
name = "bbpe"
path = "src/lib.rs"

[[bin]]
name = "bbpe"
path = "src/bin/bbpe.rs"
required-features = ["cli"]

[dependencies]
anyhow = "1.0"
rayon = "1.10"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokenizers = { version = "0.22.0", default-features = true, features = ["onig"] }
walkdir = "2.5"
log = "0.4"
ahash = "0.8"

clap = { version = "4.5", features = ["derive"], optional = true }
indicatif = { version = "0.17", features = ["rayon"], optional = true }
env_logger = { version = "0.11", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
insta = { version = "1.39", features = ["yaml"] }
tempfile = "3.10"

[build-dependencies]

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "training"
harness = false
